refactor: Improve extension installation process (#2645)
* refactor: Improve extension installation process

* Increase retry interval

* Fix tag filter

* Fix checkstyle

* Refactor code

* Address review comments

* Update streampipes-service-discovery/src/main/java/org/apache/streampipes/svcdiscovery/SpServiceDiscoveryCore.java

Co-authored-by: Philipp Zehnder <tenthe@users.noreply.github.com>

---------

Co-authored-by: Philipp Zehnder <tenthe@users.noreply.github.com>